# not-minidsp

./: .clang-format  .clang-tidy  CMakeLists.txt  filter.txt
include/audio/: audioprocessor.hpp  autosystem.hpp  biquad.hpp  circularIterator.hpp  convolution.hpp  fft.hpp  filter.hpp  fir.hpp  parallel.hpp  passthrough.hpp  processingchain.hpp  processortraits.hpp  roomcorrection.hpp  sine.hpp  table.hpp
include/util/: clihandler.hpp  config.hpp  listdevices.hpp  numbertype.hpp  print.hpp  repeat_type.hpp  singleton.hpp
src/: CMakeLists.txt  bypass.cpp  fir-rc.cpp  main.cpp
src/util/: CMakeLists.txt  print.cpp
test/: CMakeLists.txt  fft.cpp
test/fft/: periodicfrequency.txt  periodictime.txt  weirdfrequency.txt  weirdinput.txt  weirdtime.txt
